insurance-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: insurance
  name: insurance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insurance
  template:
    metadata:
      labels:
        app: insurance
    spec:
      containers:
        - image: docker.io/choidongjun/graduationwork:12
          name: insurance
          ports:
            - containerPort: 8080
              name: insurance
