mariadb-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: ex-host
subsets:
  - addresses:
      - ip: 59.9.106.221
    ports:
      - name: mariadb
        port: 3306
        protocol: TCP
